Dir restructure, minor CSS tweaks and improvements, HTML amendments
refactor: dir structure
style(refactor): $breakpoints array to match Bootstrap 5.0
style(feat): re-add breakpoint-only and breakpoint-between (prev. breakpoint-range)
style(refactor): remove related HTML class and structure as it's not vanilla HTML, does not follow the goal for this project of being a starter/boilerplate
refactor: article placeholder image and updated image credit
refactor: article placeholder copy
refactor: page(s) dir CSS import URL structure to accommodate project dir restructure

--- a/pages/article/index.html
+++ b/pages/article/index.html
@@ -34,7 +34,7 @@
 
         <!-- Summary/Dek -->
         <p class="dek">
-            On <a href="https://www.fifa.com/tournaments/mens/worldcup/qatar2022/media-releases/crypto-com-unveiled-as-fifa-world-cup-qatar-2022-tm-official-sponsor" target="_blank">Tuesday</a>, FIFA announced that Crypto.com will be an Official Sponsor of the 2022 FIFA World Cup in Qatar.
+            Lorem ipsum dolor sit amet <a href="https://example.com/" target="_blank">consectetur</a> adipisicing elit. Nesciunt qui velit natus fuga, maiores vel possimus unde magnam officia fugiat officiis incidunt provident iure obcaecati!
         </p>
         
         <figure>
@@ -45,7 +45,7 @@
                 <source media="(min-width: 1024px)" srcset="">
                 <img src="image.jpg" alt="An Omega Speedmaster Professional sat on top of regolith" loading="lazy" decoding="async">
             </picture>
-            <figcaption>Credit: <a href="https://www.omegawatches.com/" target="_blank" rel="author">Omega Watches</a></figcaption>
+            <figcaption>Credit: <a href="https://dofresh.artstation.com/projects/gJDXZG" target="_blank" rel="author">DOFRESH</a></figcaption>
         </figure>
 
         <p>Suspendisse ut fermentum est. Quisque interdum ex a pretium blandit. Aenean ac ullamcorper metus, id viverra ipsum. Morbi vestibulum purus nec <a href="#" target="_blank">pellentesque</a> viverra. Nullam sed tortor et velit volutpat iaculis. Nunc a ullamcorper neque, at consequat eros. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -82,27 +82,12 @@
 
         <blockquote>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos magni accusantium veritatis quibusdam at distinctio labore hic sapiente.</p>
-            <cite>John Doe, Google</cite>
+            <cite>John Doe, Microsoft</cite>
         </blockquote>
 
         <p>Duis mauris urna, aliquam vitae placerat ac, porttitor bibendum felis. Vestibulum imperdiet tortor in accumsan fringilla. Proin posuere felis sit amet eros euismod ultrices. Quisque vitae malesuada mauris, scelerisque mattis felis. Fusce volutpat eu erat ut dignissim.</p>
 
         <h2 id="aenean-sit-amet-nisl-quis-ipsum-tincidunt-efficitur"><a href="#aenean-sit-amet-nisl-quis-ipsum-tincidunt-efficitur">Aenean sit amet nisl quis ipsum tincidunt efficitur</a></h2>
-
-        <figure class="related">
-            <p class="related__title">
-                <a href="#">
-                    How the BBC is rolling out HSTS for better security and performance.
-                </a>
-                <span>By Alex Rodwell</span>
-            </p>
-            <picture class="related__picture">
-                <source media="(max-width: 414px)" srcset="">
-                <source media="(max-width: 768px)" srcset="">
-                <source media="(min-width: 1024px)" srcset="">
-                <img src="image.jpg" alt="An Omega Speedmaster Professional sat on top of regolith" loading="lazy" decoding="async">
-            </picture>
-        </figure>
         
         <p>Aenean sit amet nisl quis ipsum tincidunt efficitur. Nulla bibendum eros quis tellus ornare rhoncus. Suspendisse in neque id libero laoreet lobortis sit amet at dolor. Nulla ac leo ante. In egestas ornare viverra. Nullam volutpat ac risus in suscipit. Curabitur ac turpis diam. Mauris orci diam, eleifend vel sapien dignissim, iaculis commodo eros. Sed quis dolor ac nisl sodales pretium. Mauris at nibh nisi.</p>
 
