Scrollbar & Mega-menu tweaks
style(refactor): scrollbar into object
style(feat): hide mega menu items on mobile menu

--- a/pages/navigation/index.html
+++ b/pages/navigation/index.html
@@ -171,7 +171,7 @@
                         </ul>
                     </li>
                     <li class="main-navigation__links__item main-navigation__links__item--mega-menu">
-                        <button class="main-navigation__links__link-toggle"aria-expanded="false">Mega Menu</button>
+                        <button class="main-navigation__links__link-toggle" aria-expanded="false">Services</button>
                         <ul class="main-navigation__links__dropdown main-navigation__links__dropdown--mega-menu">
                             <li class="main-navigation__links__dropdown--mega-menu__item">
                                 <a href="#" class="main-navigation__links__link">
